chore: Update ProjectCard component CSS for expand/collapse animation and unexpand button shake animation. Fix hydration error with parent button child button relationship for now

--- a/src/widgets/ProjectCard/ProjectCard.css
+++ b/src/widgets/ProjectCard/ProjectCard.css
@@ -35,3 +35,25 @@
     height: auto;
   }
 }
+
+.shake-animation {
+  animation: tilt-shaking 0.5s linear forwards;
+}
+
+@keyframes tilt-shaking {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(0eg);
+  }
+  75% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
